2003-04-26  Keisuke Nishida  <knishida@netlab.jp>

	* subscripts.at, ref-mod.at: Divided from reference.at.
	* value.at: Renamed from constant.at.
	* usage.at: Renamed from packed.at.
	* initialize.at: New file.

2003-04-10  Keisuke Nishida  <knishida@netlab.jp>

	* constant.at, move.at: New files.

2003-04-04  Keisuke Nishida  <knishida@netlab.jp>

	* packed.at: New file.

2003-03-08  Keisuke Nishida  <knishida@netlab.jp>

	* testsuite.at: Include all *.at files.
	* Makefile.am: Build only a single testsuite script.

2003-02-28  Keisuke Nishida  <knishida@netlab.jp>

	* reference.at: Combine runtime.at and subref.at.

2003-02-25  Keisuke Nishida  <knishida@netlab.jp>

	* definition.at, misc.at: New files.
	* redef.at: Removed.

2002-12-12  Keisuke Nishida  <knishida@netlab.jp>

	* redefines.at: New file.

2002-12-10  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am, atlocal.in: New files.
	* redef.at, subref.at, runtime.at: New files.
