@@ -1,3 +1,7 @@
+2003-04-29  Keisuke Nishida  <knishida@netlab.jp>
+
+	* fundamental.at, entry.at: New files.
+
 2003-04-26  Keisuke Nishida  <knishida@netlab.jp>
 
 	* subscripts.at, ref-mod.at: Divided from reference.at.
